@@ -160,6 +160,9 @@ Build
 Tests
 -----
 
+- Issue #8629: Disable some test_ssl tests, since they give different
+  results with OpenSSL 1.0.0 and higher.
+
 - Issue #8533: regrtest uses backslashreplace error handler for stdout to avoid
   UnicodeEncodeError (write non-ASCII character to stdout using ASCII encoding)
 
